@@ -50,6 +50,8 @@
 
 package org.exolab.castor.builder;
 
+import org.exolab.castor.builder.info.ClassInfo;
+import org.exolab.castor.builder.info.FieldInfo;
 import org.exolab.castor.xml.schema.Annotated;
 import org.exolab.javasource.JClass;
 import java.util.Vector;
