@@ -53,6 +53,10 @@ package org.exolab.castor.builder;
 import java.util.Enumeration;
 
 import org.exolab.castor.builder.binding.XMLBindingComponent;
+import org.exolab.castor.builder.info.ClassInfo;
+import org.exolab.castor.builder.info.CollectionInfo;
+import org.exolab.castor.builder.info.FieldInfo;
+import org.exolab.castor.builder.info.XMLInfo;
 import org.exolab.castor.builder.types.XSClass;
 import org.exolab.castor.builder.types.XSList;
 import org.exolab.castor.builder.types.XSString;
