@@ -15,8 +15,8 @@
  */
 package org.exolab.castor.builder.conflictresolution;
 
-import org.exolab.castor.builder.ClassInfo;
 import org.exolab.castor.builder.SGStateInfo;
+import org.exolab.castor.builder.info.ClassInfo;
 import org.exolab.castor.builder.util.ConsoleDialog;
 import org.exolab.javasource.JClass;
 
